--- a/src/main/resources/templates/evento/formEvento.html
+++ b/src/main/resources/templates/evento/formEvento.html
@@ -4,20 +4,38 @@
       
      <head>
      	<title>Eventos APP</title>
+     	<!--Import Google Icon Font-->
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+		<!--Import materialize.css-->
+		<link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css" media="screen,projection" />
+		
+		<!--Let browser know website is optimized for mobile-->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
      </head>
-     <body>
-     	<h3>Cadastro de Eventos</h3>
-     	
-     	<form method="POST">
-     		Nome: <input type="text" value="" name="nome" />
-     		Local: <input type="text" value="" name="local" />
-     		Data: <input type="date" value="" name="data" />
-     		Horario <input type="time" value="" name="horario" />
-     		
-     		<button type="submit" >Salvar</button>
-     	
-     	</form>
-     </body>
-      
-      
+     <div class="container" >
+          <body>
+	     	<h3>Cadastro de Eventos</h3>
+	     	<a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">list</i>Lista de Eventos</a>  
+	     	<form method="POST">
+	     		Nome: <input type="text" value="" name="nome" />
+	     		<div class="row">
+		     		<div class="input-field col s6">
+		     			Local: <input type="text" value="" name="local" />
+		     		</div>
+		     		<div class="input-field col s3" >
+		     			Data: <input type="date" value="" name="data" />
+		     		</div>
+		     		<div class="input-field col s3">
+		     			Horario <input type="time" value="" name="horario" />
+		     		</div>
+		     	</div>
+	     		<button type="submit"  class="waves-effect waves-light btn">Salvar</button>
+	     	
+	     	</form>
+	     	
+	     	
+	     	<!--JavaScript at end of body for optimized loading-->
+    	 	<script type="text/javascript" src="materialize/js/materialize.min.js"></script>	
+	     </body>
+	 </div>
 </html>
