Implementação @NotEmpty @Valid Evento

--- a/src/main/resources/templates/evento/formEvento.html
+++ b/src/main/resources/templates/evento/formEvento.html
@@ -32,6 +32,7 @@
 	     		<button type="submit"  class="waves-effect waves-light btn">Salvar</button>
 	     	
 	     	</form>
+	     	<th:block th:include="fragments/messageValidation" ></th:block>
 	     	
 	     	
 	     	<!--JavaScript at end of body for optimized loading-->
