--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,9 +9,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
+		<header>			
+			  <nav>
+			    <div class="nav-wrapper teal darken-2">
+			      <a href="#" class="brand-logo center">Cadastro de Eventos</a>
+			      <ul id="nav-mobile" class="left hide-on-med-and-down">
+			        <li><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">list</i>Lista de Eventos</a></li>
+			        <li><a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Novo Evento</a></li>			        
+			      </ul>
+			    </div>
+			  </nav>
+			 </header>
 	<div class="container">
-	<h2>Lista de Eventos</h2>		
-		<a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Novo Evento</a>  
+		<h5 style="padding:20px"> Lista de Eventos</h5>
 	<table>
 		<thead>
 			<tr>
