--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,6 +37,7 @@
 				<td><span th:text="${evento.data}" /></td>
 				<td><span th:text="${evento.horario}" /></td>
 				<td><span th:text="${evento.local}" /></td>
+				<td><a th:href="${(#mvc.url('EC#deleteEvento').arg(0,evento.codigo)).build()}"><i class="material-icons">delete</i></a></td>
 			</tr>
 		</tbody>
 	</table>
